--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.21.0",
+    "html-to-image": "^1.11.11",
     "rc-slider": "^10.1.1",
     "rc-tooltip": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.11",
     "web-vitals": "^2.1.4"
